--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.0
   liquid_progress_indicator: ^0.3.2
+  cloud_firestore: ^0.13.0+1
+  provider: ^4.0.0
+  flutter_web_browser: ^0.13.0
+  url_launcher: ^5.7.10
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
