--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,16 +24,20 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.0
   liquid_progress_indicator: ^0.3.2
-  cloud_firestore: ^0.13.0+1
+  cloud_firestore: ^0.14.3
   provider: ^4.0.0
   flutter_web_browser: ^0.13.0
   url_launcher: ^5.7.10
+  firebase_auth: ^0.18.2
+  firebase_core: ^0.5.1
+  flutter_signin_button: ^1.0.0
+  google_sign_in: ^4.5.6
+
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-    - images/images/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
